<resources>
    <string name="SignatureMismatch">The new version is signed with a different key to the old one. To install the new version, the old one must be uninstalled first. Please do this and try again. (Note that uninstalling will erase any internal data stored by the app)</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_forum">Support forum</string>
    <string name="about_license">License</string>
    <string name="about_site">Website</string>
    <string name="about_source">Source code</string>
    <string name="about_title">@string/about_title_full</string>
    <string name="about_title_basic">About F-Droid Basic</string>
    <string name="about_title_full">About F-Droid</string>
    <string name="about_version">Version</string>
    <string name="add_key">Add Key</string>
    <string name="added_on">Added on %s</string>
    <string name="adding_apks_format">Adding %s to repo…</string>
    <string name="allPerms">All</string>
    <string name="all_other_repos_fine">"All other repos didn't create errors."</string>
    <string name="allow">Allow</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="antiads">Ads</string>
    <string name="antiads_key">Ads</string>
    <string name="antiadslist">This app contains advertising</string>
    <string name="antidisabledalgorithm">Signed Using An Unsafe Algorithm</string>
    <string name="antidisabledalgorithm_key">DisabledAlgorithm</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appcompatibility">App compatibility</string>
    <string name="applicationId">org.fdroid.fdroid</string>
    <string name="cache_downloaded">Keep cached apps</string>
    <string name="defaultTheme">followSystem</string>
    <string name="display">Display</string>
    <string name="enable_proxy_summary">Configure HTTP Proxy for all network requests</string>
    <string name="enable_proxy_title">Enable HTTP Proxy</string>
    <string name="expert">Expert mode</string>
    <string name="force_old_index">Force old index format</string>
    <string name="force_old_index_summary">In case there are bugs or compatibility issues, use the XML app index</string>
    <string name="force_old_installer_summary">Disable the Session Installer, including support for automatic background updates.</string>
    <string name="force_old_installer_title">Force old installer</string>
    <string name="force_touch_apps">Include touchscreen apps</string>
    <string name="forum_link">https://forum.f-droid.org</string>
    <string name="hide_all_notifications">Hide all notifications</string>
    <string name="hide_all_notifications_summary">Prevent all actions from showing in the status bar and notification drawer.</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hide_on_long_search_press_summary">Long pressing the search button will hide the app</string>
    <string name="hide_on_long_search_press_title">Hide with search button</string>
    <string name="icon">Icon</string>
    <string name="install_history">Install history</string>
    <string name="install_history_summary">View the private log of all installs and uninstalls</string>
    <string name="ipfsgw_summary_disabled">Download apps using IPFS web endpoints: disabled</string>
    <string name="ipfsgw_title">IPFS Gateways</string>
    <string name="keep_install_history">Keep install history</string>
    <string name="keep_install_history_summary">Store a log of all installs and uninstalls in a private store</string>
    <string name="license_gplv3_later">GNU General Public License version 3 or later</string>
    <string name="local_repo">Local Repo</string>
    <string name="local_repo_name">Name of your Local Repo</string>
    <string name="login_name">Username</string>
    <string name="main_menu__categories">Categories</string>
    <string name="main_menu__latest_apps">Latest</string>
    <string name="main_menu__swap_nearby">Nearby</string>
    <string name="main_menu__updates">Updates</string>
    <string name="menu_add_repo">New Repository</string>
    <string name="menu_manage">Repositories</string>
    <string name="menu_settings">Settings</string>
    <string name="no">No</string>
    <string name="notify">Show available updates</string>
    <string name="other">Other</string>
    <string name="over_data">Over data</string>
    <string name="over_wifi">Over Wi-Fi</string>
    <string name="panic_app_setting_summary">No app has been set</string>
    <string name="panic_app_setting_title">Panic Button App</string>
    <string name="panic_apps_to_uninstall">Apps to be uninstalled and all data wiped</string>
    <string name="panic_destructive_actions">Destructive Actions</string>
    <string name="panic_exit_summary">This app will be closed</string>
    <string name="panic_exit_title">Exit app</string>
    <string name="panic_hide_summary">App will hide itself</string>
    <string name="panic_hide_title">Hide %s</string>
    <string name="panic_reset_repos_summary">Force the repo setup back to defaults</string>
    <string name="panic_reset_repos_title">Reset repos</string>
    <string name="panic_settings">Panic button settings</string>
    <string name="panic_settings_summary">Actions to be taken in case of emergency</string>
    <string name="pref_language">Language</string>
    <string name="preference_category__my_apps">My Apps</string>
    <string name="preference_manage_installed_apps">Manage installed apps</string>
    <string name="preventScreenshots_summary">Blocks screenshots from being taken and hides app content from recent apps screen</string>
    <string name="preventScreenshots_title">Prevent screenshots</string>
    <string name="privacy">Privacy</string>
    <string name="prompt_to_send_crash_reports">Prompt to send crash reports</string>
    <string name="prompt_to_send_crash_reports_summary">Gather data about crashes and ask to send them to the developer</string>
    <string name="proxy">Proxy</string>
    <string name="proxy_host">Proxy Host</string>
    <string name="proxy_host_summary">"Your proxy's hostname (e.g. 127.0.0.1)"</string>
    <string name="proxy_port">Proxy Port</string>
    <string name="proxy_port_summary">"Your proxy's port number (e.g. 8118)"</string>
    <string name="repo_archive_toggle">Repository Archive</string>
    <string name="repo_archive_toggle_description">Show archived apps and outdated versions of apps</string>
    <string name="repo_description">Description</string>
    <string name="repo_details">Repository</string>
    <string name="repo_edit_credentials">Change Password</string>
    <string name="repo_fingerprint">Fingerprint of the signing key (SHA-256)</string>
    <string name="repo_last_update">Last update</string>
    <string name="repo_last_update_downloaded">Last update downloaded</string>
    <string name="repo_name">Name</string>
    <string name="repo_not_yet_updated">This repository has not been used yet. You need to enable it to view the apps it provides.</string>
    <string name="repo_num_apps">Number of apps</string>
    <string name="repo_num_apps_button">Show apps</string>
    <string name="repo_official_mirrors">Official mirrors</string>
    <string name="repo_url">Address</string>
    <string name="repo_user_mirrors">User mirrors</string>
    <string name="repositories_summary">Add additional sources of apps</string>
    <string name="scan_removable_storage_summary">Look for package repos on removable storage like SD Cards and USB thumb drives</string>
    <string name="scan_removable_storage_title">Scan removable storage</string>
    <string name="send_to_fdroid_metrics">Send usage data</string>
    <string name="send_to_fdroid_metrics_summary">Sends anonymous data weekly to F-Droid Metrics (requires Keep install history)</string>
    <string name="send_version_and_uuid">Send version and UUID to servers</string>
    <string name="send_version_and_uuid_summary">"Include this app's version and a random, unique ID when downloading, takes effect next app restart."</string>
    <string name="show_anti_feature_apps">Include Anti-Features</string>
    <string name="show_incompat_versions">Include incompatible versions</string>
    <string name="site_link">https://f-droid.org</string>
    <string name="source_link">https://gitlab.com/fdroid/fdroidclient</string>
    <string name="swap_confirm">Confirm swap</string>
    <string name="swap_scan_or_type_url">One person needs to scan the code, or type the URL of the other in a browser.</string>
    <string name="swap_send_fdroid">Send F-Droid</string>
    <string name="swap_welcome">Welcome to F-Droid!</string>
    <string name="system_installer">Privileged Extension</string>
    <string name="theme">Theme</string>
    <string name="unknown">Unknown</string>
    <string name="unstable_updates">Unstable updates</string>
    <string name="unstable_updates_summary">Suggest updates to unstable versions</string>
    <string name="update_auto_download">Automatically fetch updates</string>
    <string name="update_auto_download_summary">Updates are downloaded automatically and you are notified to install them</string>
    <string name="update_interval">Automatic update interval</string>
    <string name="updates">Updates</string>
    <string name="useDnsCache">Use DNS Cache</string>
    <string name="useDnsCacheSummary">Use cached results to minimize DNS queries.</string>
    <string name="useTor">Use Tor</string>
    <string name="useTorSummary">Force download traffic through Tor for increased privacy. Requires Orbot</string>
    <string name="use_bluetooth">Use Bluetooth</string>
    <string name="use_pure_black_dark_theme">Use pure black background in dark theme</string>
    <string name="use_pure_black_dark_theme_summary">Recommended only for OLED screens.</string>
    <string name="warning_scaning_qr_code">"Your camera doesn't seem to have an autofocus. It might be difficult to scan the code."</string>
    <string name="yes">Yes</string>
</resources>