<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceScreen android:title="@string/about_title" android:key="pref_about" />
    <PreferenceCategory android:title="@string/preference_category__my_apps">
        <PreferenceScreen android:title="@string/preference_manage_installed_apps">
            <intent android:targetPackage="@string/applicationId" android:action="android.intent.action.MAIN" android:targetClass="org.fdroid.fdroid.views.installed.InstalledAppsActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/menu_manage" android:summary="@string/repositories_summary">
            <intent android:targetPackage="@string/applicationId" android:action="android.intent.action.MAIN" android:targetClass="org.fdroid.fdroid.views.repos.ManageReposActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:visible="false" android:title="@string/install_history" android:key="installHistory" android:summary="@string/install_history_summary">
            <intent android:targetPackage="@string/applicationId" android:action="android.intent.action.MAIN" android:targetClass="org.fdroid.fdroid.views.InstallHistoryActivity" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/updates">
        <org.fdroid.fdroid.views.LiveSeekBarPreference android:layout="@layout/preference_seekbar" android:title="@string/over_wifi" android:key="overWifi" android:defaultValue="@integer/defaultOverWifi" />
        <org.fdroid.fdroid.views.LiveSeekBarPreference android:layout="@layout/preference_seekbar" android:title="@string/over_data" android:key="overData" android:defaultValue="@integer/defaultOverData" />
        <SwitchPreferenceCompat android:title="@string/update_auto_download" android:key="updateAutoDownload" android:summary="@string/update_auto_download_summary" />
        <org.fdroid.fdroid.views.LiveSeekBarPreference android:layout="@layout/preference_seekbar" android:title="@string/update_interval" android:key="updateIntervalSeekBarPosition" android:defaultValue="@integer/defaultUpdateInterval" />
        <SwitchPreferenceCompat android:title="@string/notify" android:key="updateNotify" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/display" android:key="pref_category_display">
        <ListPreference android:title="@string/pref_language" android:key="language" />
        <ListPreference android:entries="@array/themeNames" android:title="@string/theme" android:key="theme" android:defaultValue="@string/defaultTheme" android:entryValues="@array/themeValues" />
        <SwitchPreferenceCompat android:title="@string/use_pure_black_dark_theme" android:key="usePureBlackDarkTheme" android:summary="@string/use_pure_black_dark_theme_summary" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/appcompatibility" android:key="pref_category_appcompatibility">
        <SwitchPreferenceCompat android:title="@string/show_incompat_versions" android:key="incompatibleVersions" android:defaultValue="false" />
        <MultiSelectListPreference android:entries="@array/antifeaturesNames" android:title="@string/show_anti_feature_apps" android:key="showAntiFeatures" android:defaultValue="@array/antifeaturesValuesDefault" android:entryValues="@array/antifeaturesValues" />
        <SwitchPreferenceCompat android:title="@string/force_touch_apps" android:key="ignoreTouchscreen" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/local_repo" app:isPreferenceVisible="@bool/pref_visible_only_in_full">
        <EditTextPreference android:title="@string/local_repo_name" android:key="localRepoName" />
        <SwitchPreferenceCompat android:title="@string/scan_removable_storage_title" android:key="scanRemovableStorage" android:summary="@string/scan_removable_storage_summary" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/proxy">
        <PreferenceScreen android:title="@string/ipfsgw_title" android:key="ipfsGateways" android:summary="@string/ipfsgw_summary_disabled">
            <intent android:targetPackage="@string/applicationId" android:action="android.intent.action.MAIN" android:targetClass="org.fdroid.fdroid.views.IpfsGatewaySettingsActivity" />
        </PreferenceScreen>
        <SwitchPreferenceCompat android:title="@string/useDnsCache" android:key="useDnsCache" android:summary="@string/useDnsCacheSummary" />
        <SwitchPreferenceCompat android:title="@string/useTor" android:key="useTor" android:summary="@string/useTorSummary" />
        <SwitchPreferenceCompat android:title="@string/enable_proxy_title" android:key="enableProxy" android:summary="@string/enable_proxy_summary" android:defaultValue="false" />
        <EditTextPreference android:title="@string/proxy_host" android:key="proxyHost" android:summary="@string/proxy_host_summary" android:dependency="enableProxy" />
        <EditTextPreference android:title="@string/proxy_port" android:key="proxyPort" android:summary="@string/proxy_port_summary" android:dependency="enableProxy" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/privacy" android:key="pref_category_privacy">
        <SwitchPreferenceCompat android:title="@string/prompt_to_send_crash_reports" android:key="promptToSendCrashReports" android:summary="@string/prompt_to_send_crash_reports_summary" android:defaultValue="true" />
        <SwitchPreferenceCompat android:title="@string/preventScreenshots_title" android:key="preventScreenshots" android:summary="@string/preventScreenshots_summary" android:defaultValue="false" />
        <SwitchPreferenceCompat android:title="@string/hide_on_long_search_press_title" android:key="hideOnLongPressSearch" android:summary="@string/hide_on_long_search_press_summary" android:defaultValue="false" app:isPreferenceVisible="@bool/pref_visible_only_in_full" />
        <PreferenceScreen android:title="@string/panic_settings" android:summary="@string/panic_settings_summary" app:isPreferenceVisible="@bool/pref_visible_only_in_full">
            <intent android:targetPackage="@string/applicationId" android:action="android.intent.action.MAIN" android:targetClass="org.fdroid.fdroid.panic.PanicPreferencesActivity" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/other" android:key="pref_category_other">
        <ListPreference android:entries="@array/keepCacheNames" android:title="@string/cache_downloaded" android:key="keepCacheFor" android:defaultValue="86400000" android:entryValues="@array/keepCacheValues" />
        <SwitchPreferenceCompat android:title="@string/expert" android:key="expert" android:defaultValue="false" />
        <PreferenceCategory android:title="@string/expert" android:key="pref_category_expert" android:dependency="expert">
            <SwitchPreferenceCompat android:title="@string/unstable_updates" android:key="unstableUpdates" android:summary="@string/unstable_updates_summary" android:dependency="expert" android:defaultValue="false" />
            <SwitchPreferenceCompat android:title="@string/keep_install_history" android:key="keepInstallHistory" android:summary="@string/keep_install_history_summary" android:dependency="expert" android:defaultValue="false" />
            <SwitchPreferenceCompat android:title="@string/send_to_fdroid_metrics" android:key="sendToFdroidMetrics" android:summary="@string/send_to_fdroid_metrics_summary" android:dependency="expert" android:defaultValue="false" />
            <SwitchPreferenceCompat android:title="@string/hide_all_notifications" android:key="hideAllNotifications" android:summary="@string/hide_all_notifications_summary" android:dependency="expert" android:defaultValue="false" />
            <SwitchPreferenceCompat android:title="@string/send_version_and_uuid" android:key="sendVersionAndUUIDToServers" android:summary="@string/send_version_and_uuid_summary" android:dependency="expert" android:defaultValue="false" />
            <SwitchPreferenceCompat android:title="@string/force_old_index" android:key="forceOldIndex" android:summary="@string/force_old_index_summary" android:dependency="expert" android:defaultValue="false" />
            <SwitchPreferenceCompat android:title="@string/force_old_installer_title" android:key="forceOldInstaller" android:summary="@string/force_old_installer_summary" android:dependency="expert" android:defaultValue="false" />
            <SwitchPreferenceCompat android:persistent="false" android:title="@string/system_installer" android:key="privilegedInstaller" android:dependency="expert" />
        </PreferenceCategory>
    </PreferenceCategory>
</PreferenceScreen>