<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreferenceCompat android:title="@string/panic_exit_title" android:key="pref_panic_exit" android:summary="@string/panic_exit_summary" android:defaultValue="true" />
    <PreferenceCategory android:title="@string/panic_destructive_actions" android:key="pref_panic_destructive_actions">
        <ListPreference android:title="@string/panic_app_setting_title" android:key="pref_panic_app" android:summary="@string/panic_app_setting_summary" />
        <org.fdroid.fdroid.panic.DestructiveSwitchPreference android:enabled="false" android:title="@string/panic_hide_title" android:key="pref_panic_hide" android:summary="@string/panic_hide_summary" android:defaultValue="false" />
        <org.fdroid.fdroid.panic.DestructiveSwitchPreference android:enabled="false" android:title="@string/panic_reset_repos_title" android:key="pref_panic_reset_repos" android:summary="@string/panic_reset_repos_summary" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/panic_apps_to_uninstall" android:key="pref_panic_apps_to_uninstall" />
</PreferenceScreen>