<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="24.0dip" android:paddingTop="4.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/about_version" style="@style/CaptionText" />
        <TextView android:id="@id/version" android:text="@string/unknown" style="@style/BodyText" />
        <TextView android:text="@string/about_site" style="@style/CaptionText" />
        <TextView android:autoLink="web" android:text="@string/site_link" style="@style/BodyText" />
        <TextView android:text="@string/about_forum" style="@style/CaptionText" />
        <TextView android:autoLink="web" android:text="@string/forum_link" style="@style/BodyText" />
        <TextView android:text="@string/about_source" style="@style/CaptionText" />
        <TextView android:autoLink="web" android:text="@string/source_link" style="@style/BodyText" />
        <TextView android:text="@string/about_license" style="@style/CaptionText" />
        <TextView android:text="@string/license_gplv3_later" style="@style/BodyText" />
    </LinearLayout>
</ScrollView>