<?xml version="1.0" encoding="utf-8"?>
<org.fdroid.fdroid.nearby.SwapView android:orientation="vertical" android:background="@color/swap_blue" android:padding="18.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" swap:toolbarTitle="@string/swap_confirm"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:swap="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/icon" android:layout_width="117.599976dip" android:layout_height="117.599976dip" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:contentDescription="@string/icon" swap:srcCompat="@drawable/ic_launcher" />
    <TextView android:textSize="28.0sp" android:id="@id/text_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/swap_welcome" android:lines="1" android:layout_below="@id/icon" style="@style/SwapTheme.Wizard.ReceiveSwap.MainText" />
    <TextView android:textSize="25.75sp" android:id="@id/text_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/text_title" style="@style/SwapTheme.Wizard.Text" />
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="45.0dip" android:layout_below="@id/text_description" android:layout_centerInParent="true">
        <Button android:id="@id/confirm_receive_yes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="25.0dip" android:text="@string/no" android:layout_marginEnd="25.0dip" android:backgroundTint="@color/swap_deny" />
        <Button android:id="@id/confirm_receive_no" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/yes" android:backgroundTint="@color/swap_light_blue" />
    </LinearLayout>
</org.fdroid.fdroid.nearby.SwapView>